[package]
name = "bitbuf" 
version = "0.1.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
description = "Like the bitvec crate but only allows one unsigned primitive in size and got much simpler API."
repository = "https://github.com/IronThread/bitbuf"
keywords = ["bit","buffer","memory"]
categories = ["no-std"]

[dependencies]
safe_transmute_2 = "0"
primitive_traits = "0"